* Greying "Load random article" menu entry if no content is loaded (ID: 3439112)
* Add the support of the "publisher" ZIM Metadata
* Fix many localisation files which were broken due to a buggy script (ID: 3440627)
* Fix a wrong behaviour in case of two portable kiwix consecutive runs (ID: 3442083)
* Improve the library menus visibility (ID: 3439109)

Kiwix 0.9 beta4
* Fix regression, menu "last open" where not working anymore
* Fix regression, avoid restarting aria2 at program exit
* New content manager search/filter feature (ID: 3390515)
* Newly able to deal with more than one XML library feed
* Fixed missing link on feedback notification on OSX no growl (ID: 3419105)
* Better kiwix-serve default loading if no welcome page is defined in ZIM (ID: 3417227)
* Fixed Freezes on Windows 7 (ID: 3422838)
* First version of kiwix-install

Kiwix 0.9 beta3
* Add for GNU/Linux Freedesktop managers the kiwix icon to ZIM files
* Fixed issue in the library manager concerning ZIM files with accented paths
* Selectable title and description in the content manager (ID: 3390514)
* Fix buggy history behaviour by opening external urls
* Implement ctrl+[PAGE_UP|PAGE_DOWN] to navigate in tabs
* Fix different issue impacting keypress event mgmt on Tabs
* Add hour pointer during search or loading of articles (ID: 3362817)
* Remove the reset button for the bookmarks, was dangerous and ambigous (ID: 3395239)
* Add "Copy" and "Select all" in the right-click contextual menu if necessary (ID: 3015761)
* Add the "Search for..." in the contextual menu
* Lots of new locales supported (thx Translatewiki.net)
* Display the content manager per default if no local content detected (first start use case)
* Kiwix again (was a regression) able to deal with relative paths in the library.xml (ID: 3397592)
* Now possible to open ZIM file with accented paths on Windows (ID: 3107895)
* New keyboard shortcuts to deal with bookmarks
* Add arrow keys handling to navigate in the content manager (ID: 3389511)