@@ -10,10 +10,12 @@ _languagesHash['br']        = "Brezhoneg";
 _languagesHash['ca']        = "Català";
 _languagesHash['cs']        = "Česky";
 _languagesHash['de']        = "Deutsch";
+_languagesHash['deu']        = "Deutsch";
 _languagesHash['da']        = "Dansk";
-_languagesHash['dhb']       = "Dolnoserbski";
+_languagesHash['dsb']       = "Dolnoserbski";
 _languagesHash['el']        = "Ελληνικά";
 _languagesHash['en']        = "English";
+_languagesHash['eng']        = "English";
 _languagesHash['eo']        = "Esperanto";
 _languagesHash['es']        = "Español";
 _languagesHash['fa']        = "فارسی";
@@ -21,6 +23,7 @@ _languagesHash['fi']        = "Suomi";
 _languagesHash['fr']        = "Français";
 _languagesHash['frp']       = "Provençau";
 _languagesHash['gl']        = "Galego";
+_languagesHash['gu']        = "ગુજરાતી";
 _languagesHash['gsw']       = "Schwyzerdütsch";
 _languagesHash['he']        = "עברית";
 _languagesHash['hi']        = "हिन्दी";
@@ -33,8 +36,10 @@ _languagesHash['ksh']       = "Ripoarisch";
 _languagesHash['lv']        = "Latviešu";
 _languagesHash['mk']        = "Македонски";
 _languagesHash['ml']        = "മലയാളം";
+_languagesHash['mr']        = "मराठी";
 _languagesHash['ms']        = "Bahasa Melayu";
 _languagesHash['mt']        = "Malti";
+_languagesHash['my']        = "မြန်မာဘာသာ";
 _languagesHash['nl']        = "Nederlands";
 _languagesHash['no']        = "Norsk (bokmål)";
 _languagesHash['pl']        = "Język polski";
@@ -49,13 +54,19 @@ _languagesHash['sr-ec']     = "Српски (ћирилица)";
 _languagesHash['sr-el']     = "Srpski (latinica)";
 _languagesHash['su']        = "Basa Sunda";
 _languagesHash['sv']        = "Svenska";
+_languagesHash['sw']        = "Kiswahili";
 _languagesHash['te']        = "తెలుగు";
 _languagesHash['th']        = "ไทย";
 _languagesHash['tt-cyrl']   = "Татарча";
 _languagesHash['ug-arab']   = "ئۇيغۇرچە";
 _languagesHash['uk']        = "Українська";
+_languagesHash['ur']        = "اردو";
 _languagesHash['vi']        = "Tiếng Việt";
 _languagesHash['zh']        = "中文";
 _languagesHash['zh-hans']   = "中文(简体)";
 _languagesHash['zh-hant']   = "中文(繁體)";
+
+function getLanguageNameFromISO(iso) {
+    return _languagesHash[iso] || "";
+}
 
